--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,6 +1,17 @@
 .alert{
   display: none;
 }
+#overlay {
+  position: fixed;
+  z-index: 1000;
+  background-color: #f8f8f8;
+  display: none;
+  opacity: .75;
+  filter: alpha(opacity=75);
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
 /* ---------------------------------------------------------------- */
 .mapClass{height:797px;width: 100%}
 .wd-80{width:80px;}
