--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -3431,7 +3431,7 @@ footer .copyrigts p a:hover {
   margin-bottom: 100px;
   margin-top: 100px;
 }
-.mapClass{height:400px;}
+.mapClass{height:400px;width:100%;position:fixed}
 }
 @media (max-width: 768px) {
   .map-filter-box {
