--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -5,6 +5,20 @@
   border-color: rgb(237, 28, 36);
 }
 
+#profilePic{
+  width: 145px;
+  height: 145px;
+  border-style: solid;
+  border-width: 4px;
+  /* border-radius: 10px; */
+  border-color: #ddd;
+}
+
+img#profilePic:hover{
+  border-color: #aaa;
+  border-width: 5px;
+}
+
 #overlay {
   position: fixed;
   z-index: 1000;
