Google map Update's

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -6,7 +6,9 @@
 }
 
 .feature-util-hide {
-    display: none;
+    display: none !important;
+    hidden:true !important;
+
 }
 
 .feature-util-show {
