--- a/public/css/album.css
+++ b/public/css/album.css
@@ -1,8 +1,38 @@
 #thumbWrapper {
     width: 100%;
-    height: 420px !important;
-    overflow-y: hidden;
+    height: 440px !important;
+    margin-left: -10px;
+    }
+
+.style-4::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: #FFFFFF;
+    background-color: #FFFFFF;
+}
+
+.style-4::-webkit-scrollbar
+{
+    width: 10px;
+    background-color: #FFFFFF;
+}
+
+.style-4::-webkit-scrollbar-thumb
+{
+    background-color: #FFFFFF;
+    border: 2px solid #FFFFFF;
+}
+.scrollbar
+{
+
+    float: left;
+    background: #FFFFFF;
     overflow-x: scroll;
+    margin-bottom: 25px;
+}
+
+.force-overflow
+{
+    min-height: 440px;
 }
 
 
@@ -22,4 +52,14 @@
 
 #thumbList li:hover{
     opacity: 0.5;
+}
+
+#thumbList li img{
+
+    max-width: 24%;
+    height: auto;
+    float: left;
+    margin-right: 5px;
+    margin-bottom: 20px !important;
+
 }
