--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -165,10 +165,15 @@ img#profilePicImage:hover{
 }
 .hide{display:none;}
 footer {
-  background: #2c2c2c;
-  border-top: 1px solid #f5f5f5;
-  color: #d1d1d1;
-  font-weight: 600;
+    background: #2c2c2c none repeat scroll 0 0;
+    border-top: 1px solid #f5f5f5;
+    bottom: 0;
+    color: #d1d1d1;
+    font-weight: 600;
+    left: 0;
+    position: fixed;
+    width: 100%;
+    z-index: 99;
 }
 footer .copyrigts p {
   font-size: 15px;
