--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -3457,6 +3457,7 @@ footer .copyrigts p a:hover {
 .hot-offer .hot-offer-slider {
   padding-top: 10px;
   overflow: hidden;
+  position: fixed;
 }
 .hot-offer h2, .hot-offer p {
   margin: 0;
@@ -3725,6 +3726,22 @@ footer .copyrigts p a:hover {
 .listing-item .item-body .block:first-of-type {
   width: 40%;
   border-right: 1px solid #f5f5f5;
+}
+.double-pad-left {
+  padding-left: 20px;
+}
+.double-pad-right {
+  padding-right: 20px;
+}
+.elip {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.tile-wd {
+  width: 142px;
+  float: left;
 }
 @media (max-width: 1600px) {
   .listing-item .item-body .block.services {
