--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -313,12 +313,12 @@ footer .copyrigts p {
   margin: 20px 0 35px;
 }
 .imgdiv img {
-  height: 420px;
+
   width: 100%;
 }
 .imgdiv {
   cursor: pointer;
-  height: 420px;
+
   margin: 0 0 10px;
   padding: 0 10px;
 }
@@ -388,6 +388,13 @@ html body .no-pad {
 }
 .gap-bottom {
   margin-bottom: 10px !important;
+}
+.margin-top {
+    margin-top: 30%;
+}
+html body .modal-backdrop {
+    background: #000 !important;
+    opacity: 0.7 !important;
 }
 @media (max-width: 1640px) {
 	
@@ -464,6 +471,13 @@ html body .no-pad {
 .list-content {
     padding: 10px;
     width: 100% !important;
-}	
-	
+}
+   html body  #thumbWrapper {
+
+        height: 0px !important;
+
+    }
+    .force-overflow {
+        min-height: 90px !important;
+    }
 }
