--- a/public/Template/directive/modelTemplate.html
+++ b/public/Template/directive/modelTemplate.html
@@ -1,5 +1,5 @@
 <div class="modal fade" >
     <div class="modal-dialog">
-        <div class="modal-body" ng-transclude ></div>
+        <div class="modal-body" ng-transclude />
     </div>
 </div>
