--- a/public/Template/directive/dropdownTemplate.html
+++ b/public/Template/directive/dropdownTemplate.html
@@ -1,6 +1,6 @@
 <div class="select-box type-2 " >
     <input type="hidden" ng-value="<%type%>" />
-    <input class="js-input no-select" type="text" required value="<% type %>" placeholder="<% title %>" ng-model="type" ng-readonly="true"  />
+    <input class="js-input no-select"  type="text" id="<% type %>"  value="<% type %>" placeholder="<% title %>" ng-model="type" ng-readonly="true"  />
     <ul>
         <li ng-repeat="value in option" id="<%value%>" value="<%value%>" ng-click="selectedvalue(value)"><% value %></li>
     </ul>
