--- a/public/Template/directive/modelTemplate.html
+++ b/public/Template/directive/modelTemplate.html
@@ -1,5 +1,14 @@
 <div class="modal fade" >
     <div class="modal-dialog">
-        <div class="modal-body" ng-transclude />
+        <div class="modal-body"  >
+            <div class="col-md-24 col-lg-24 no-pad margin-top"  >
+                <span class="angular-lightbox-inner">
+                    <a href class="previous" title="Previous" ng-click="vm.showPrevious(vm.currentImage.ind)">«</a>
+                    <img ng-attr-src=" /<% vm.currentImage.img %> "  >
+                    <a href class="next" title="Next" ng-click="vm.showNext(vm.currentImage.ind)" >»</a>
+                    <a href class="close" title="Close" ng-click="vm.closeModal()">×</a>
+                </span>
+            </div>
+        </div>
     </div>
 </div>
