--- a/public/Template/directive/IndexDropdownTemplate.html
+++ b/public/Template/directive/IndexDropdownTemplate.html
@@ -1,7 +1,7 @@
 
     <div class=" select-box <% addclass %>">
         <input type="hidden" ng-value="<%type%>" />
-        <input class="filter-box-input js-input no-select drop-wd" type="text" id="<% type %>"  value="<% type %>" placeholder="<% title %>" ng-model="type" ng-readonly="true" />
+        <input class="<% inputclass %>" type="text" id="<% type %>"  value="<% type %>" placeholder="<% title %>" ng-model="type" ng-readonly="true" />
         <ul>
             <li ng-repeat="value in option" id="<%value%>" value="<%value%>" ng-click="Indselectedvalue(value)"><% value %></li>
         </ul>
